--- a/index.html
+++ b/index.html
@@ -274,6 +274,68 @@
 </div>
 </section>
 
+<div id="wrapper">
+  <h1>Help us get an understanding on your project idea</h1>
+  
+  <form id="quiz">
+    <!-- Question 1 -->
+    <h2>What is your budget?</h2>
+    <!-- Here are the choices for the first question. Each input tag must have the same name. For this question, the name is q1. -->
+    <!-- The value is which answer the choice corresponds to. -->
+    <label><input type="radio" name="q1" value="a1">
+    <p id="firstAnswer">£50 - £250</p>
+    </label><br />
+    <label><input type="radio" name="q1" value="a2">
+     <p id="secondAnswer">£250 - £500</p>
+    </label><br />
+    <label><input type="radio" name="q1" value="a3">
+      <p id="thirdAnswer">£500 - £1000</p>
+    </label><br />
+    <label><input type="radio" name="q1" value="a4">
+      <p id="fourthAnswer">+£1000</p>
+    </label><br />
+
+    <!-- Question 2 -->
+    <h2>What is your timeframe?</h2>
+    <!-- Here are the choices for the first question. Each input tag must have the same name. For this question, the name is q1. -->
+    <!-- The value is which answer the choice corresponds to. -->
+    <label><input type="radio" name="q2" value="b1">
+    <p id="q2FirstAnswer">Less than 2 weeks</p>
+    </label><br />
+    <label><input type="radio" name="q2" value="b2">
+     <p id="q2SecondAnswer">Between 2 and 4 weeks</p>
+    </label><br />
+    <label><input type="radio" name="q2" value="b3">
+      <p id="q2ThirdAnswer">Between 1 and 3 months </p>
+    </label><br />
+    <label><input type="radio" name="q2" value="b4">
+      <p id="q2FourthAnswer">There is none!</p>
+    </label><br />
+    
+    <!-- Question 2 -->
+    <h2>What needs to be done?</h2>
+    <!-- Here are the choices for the first question. Each input tag must have the same name. For this question, the name is q1. -->
+    <!-- The value is which answer the choice corresponds to. -->
+    <label><input type="radio" name="q3" value="c1">
+    <p id="q3FirstAnswer">Painting and wallpapering</p>
+    </label><br />
+    <label><input type="radio" name="q3" value="c2">
+     <p id="q3SecondAnswer">Refurbishments</p>
+    </label><br />
+    <label><input type="radio" name="q3" value="c3">
+      <p id="q3ThirdAnswer">Extensions</p>
+    </label><br />
+    <label><input type="radio" name="q3" value="c4">
+      <p id="q3FourthAnswer">All the above or others</p>
+    </label><br />
+    <button type="submit" id="submit" onclick="tabulateAnswers()">Submit Your Answers</button>
+  <button type="reset" id="reset" onclick="resetAnswer()">Reset</button>
+  </form>
+  
+  
+  <div id="answer">Your result will show up here!</div>
+</div>
+
 <section id="GetQuote">
 <section class="imageBackground">
     <div id="contentContainerForm">
