Styling and Responsive Design Implemented For Questionniare

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 </div>
 </section>
 
+<div id="contentContainer01">
 <div id="wrapper">
   <h1>Help us get an understanding on your project idea</h1>
   
@@ -334,6 +335,7 @@
   
   
   <div id="answer">Your result will show up here!</div>
+</div>
 </div>
 
 <section id="GetQuote">
