ReadMe File Updated With The Use Of Validators

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Contemporary Coatings</title>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
+    <script  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
         (function(){
         emailjs.init("ehcDD1j53ghsxMSwO");
         })();
@@ -28,10 +28,10 @@
         </ul>
     </nav>
         <div id="fullScreen">
-            <img src="assets/images/Banner_DarkBlue_01.jpg" alt="" id="hero-image">
+            <img src="assets/images/Banner_DarkBlue_01.jpg" alt="Banner" id="hero-image">
         </div>
 
-    <section id="About">
+    <div id="About">
 
     <div id="contentContainer">
 
@@ -54,33 +54,33 @@
             <a href="#OurGallery" id="OurWorkBtn">See Some of Our Work</a>
         </div>
     </div>
-</section>
+  </div>
 
 
-        <section id="Services">
+        <div id="Services">
             <div id="servicesContainer">
                 <div id="images">
-                    <img id="image" src="assets/images/Interior_01.jpg" alt="">
+                    <img id="image" src="assets/images/Interior_01.jpg" alt="Interior painting">
                     <h3 id="imageText">Interior Painting</h3>
                     <p id="imageText">Whether it's giving the kitchen wall a new colour or sprucing up your bedroom, Contemporary Coatings know what's right and will offer you the best possible solution and work with your specifications.</p>
                 </div>
                 <div id="images">
-                    <img id="image" src="assets/images/ExteriorPainting_01.jpg" alt="">
+                    <img id="image" src="assets/images/ExteriorPainting_01.jpg" alt="Exterior painting">
                     <h3 id="imageText">Exterior Painting</h3>
                     <p id="imageText">Does your brickwork need tidying up with a splash of paint, or your wood paneling needs bringing into this century with some beautiful restoration paintwork? We’re on hand to bring your vision to life.</p>
                 </div>
                 <div id="images">
-                    <img id="image" src="assets/images/Spraying_02.jpg" alt="">
+                    <img id="image" src="assets/images/Spraying_02.jpg" alt="Spray Painting">
                     <h3 id="imageText">Spraying</h3>
                     <p id="imageText">Contemporary Coatings are domestic and commercial spray paint specialists. Offering professional spray painting to ceilings, walls, bedroom and household furniture and custom joinery.</p>
                 </div>
                 <div id="images">
-                    <img id="image" src="assets/images/Wallpapering_01.jpg" alt="">
+                    <img id="image" src="assets/images/Wallpapering_01.jpg" alt="Wallpapering">
                     <h3 id="imageText">Wallpapering</h3>
                     <p id="imageText">Are you Wanting to cover your living room or a feature wall in your bedroom or lounge? Don't worry, We have you covered! Contemporary Coatings provide high quality wallpapering work.</p>
                 </div>
             </div>
-        </section>
+          </div>
 
 
 
@@ -108,7 +108,7 @@
 </div>
 
 
-<section class="blueBackground">
+<div class="blueBackground">
 <div id="contentContainer02">
     <div id="serviceContainer02">
         <h3 id="serviceHeader03">What Our Customers Say...</h3>
@@ -141,10 +141,9 @@
 
 
 
+
 </div>
-</div>
-</section>
-<section id="OurGallery">
+<div id="OurGallery">
 <div id="contentContainer03">
 <div id="myBtnContainer">
     <button class="btn active" onclick="filterSelection('all')"> Show all</button>
@@ -215,47 +214,47 @@
   
       <div class="mySlides">
         <div class="numbertext">1 / 9</div>
-        <img src="assets/images/ExteriorPainting_01.jpg" style="width:100%">
+        <img src="assets/images/ExteriorPainting_01.jpg" style="width:100%" alt="Exterior painting">
       </div>
   
       <div class="mySlides">
         <div class="numbertext">2 / 9</div>
-        <img src="assets/images/ExteriorPainting_02.jpg" style="width:100%">
+        <img src="assets/images/ExteriorPainting_02.jpg" style="width:100%" alt="Exterior painting">
       </div>
   
       <div class="mySlides">
         <div class="numbertext">3 / 9</div>
-        <img src="assets/images/ExteriorPainting_03.jpg" style="width:100%">
+        <img src="assets/images/ExteriorPainting_03.jpg" style="width:100%" alt="Exterior painting">
       </div>
   
       <div class="mySlides">
         <div class="numbertext">4 / 9</div>
-        <img src="assets/images/Interior_01.jpg" style="width:100%">
+        <img src="assets/images/Interior_01.jpg" style="width:100%" alt="Interior painting">
       </div>
 
       <div class="mySlides">
         <div class="numbertext">5 / 9</div>
-        <img src="assets/images/Interior_02.jpg" style="width:100%">
+        <img src="assets/images/Interior_02.jpg" style="width:100%" alt="Interior painting">
       </div>
 
       <div class="mySlides">
         <div class="numbertext">6 / 9</div>
-        <img src="assets/images/Interior_03.jpg" style="width:100%">
+        <img src="assets/images/Interior_03.jpg" style="width:100%" alt="Interior painting">
       </div>
 
       <div class="mySlides">
         <div class="numbertext">7 / 9</div>
-        <img src="assets/images/Spraying_02.jpg" style="width:100%">
+        <img src="assets/images/Spraying_02.jpg" style="width:100%" alt="Spray painting">
       </div>
 
       <div class="mySlides">
         <div class="numbertext">8 / 9</div>
-        <img src="assets/images/Wallpapering_01.jpg" style="width:100%">
+        <img src="assets/images/Wallpapering_01.jpg" style="width:100%" alt="Wallpapering">
       </div>
   
       <div class="mySlides">
         <div class="numbertext">9 / 9</div>
-        <img src="assets/images/Wallpapering_03.jpg" style="width:100%">
+        <img src="assets/images/Wallpapering_03.jpg" style="width:100%" alt="Wallpapering">
       </div>
 
       <!-- Next/previous controls -->
@@ -272,7 +271,7 @@
   <!-- END OF MODAL SECTION -->
 
 </div>
-</section>
+</div>
 
 <div id="contentContainer01">
 <div id="wrapper">
@@ -285,16 +284,16 @@
     <!-- The value is which answer the choice corresponds to. -->
     <label><input type="radio" name="q1" value="a1">
     <p id="firstAnswer">£50 - £250</p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q1" value="a2">
      <p id="secondAnswer">£250 - £500</p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q1" value="a3">
       <p id="thirdAnswer">£500 - £1000</p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q1" value="a4">
       <p id="fourthAnswer">+£1000</p>
-    </label><br />
+    </label><br/>
 
     <!-- Question 2 -->
     <h2>What is your timeframe?</h2>
@@ -302,16 +301,16 @@
     <!-- The value is which answer the choice corresponds to. -->
     <label><input type="radio" name="q2" value="b1">
     <p id="q2FirstAnswer">Less than 2 weeks</p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q2" value="b2">
      <p id="q2SecondAnswer">Between 2 and 4 weeks</p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q2" value="b3">
       <p id="q2ThirdAnswer">Between 1 and 3 months </p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q2" value="b4">
       <p id="q2FourthAnswer">There is none!</p>
-    </label><br />
+    </label><br/>
     
     <!-- Question 2 -->
     <h2>What needs to be done?</h2>
@@ -319,16 +318,16 @@
     <!-- The value is which answer the choice corresponds to. -->
     <label><input type="radio" name="q3" value="c1">
     <p id="q3FirstAnswer">Painting and wallpapering</p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q3" value="c2">
      <p id="q3SecondAnswer">Refurbishments</p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q3" value="c3">
       <p id="q3ThirdAnswer">Extensions</p>
-    </label><br />
+    </label><br/>
     <label><input type="radio" name="q3" value="c4">
       <p id="q3FourthAnswer">All the above or others</p>
-    </label><br />
+    </label><br/>
     <button type="submit" id="submit" onclick="tabulateAnswers()">Submit Your Answers</button>
   <button type="reset" id="reset" onclick="resetAnswer()">Reset</button>
   </form>
@@ -338,8 +337,8 @@
 </div>
 </div>
 
-<section id="GetQuote">
-<section class="imageBackground">
+<div id="GetQuote">
+<div class="imageBackground">
     <div id="contentContainerForm">
         <div class="itemContainer" >
             <div class="itemLeftContainer">
@@ -387,8 +386,8 @@
             </div>
         </div>
     </div>
-</section>
-</section>
+  </div>
+</div>
 
 <footer>
     <img src="assets/images/Contemporary-Coatings_Logo_WhiteText_3D-300x183.png" alt="Contemporary Coating's Logo">
